--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -3,8 +3,14 @@
   color: #fff;
   padding: 10px;
   text-align: center;
+  display: flex;
+  justify-content: center;
   h1 {
     margin: 10px;
     font-weight: 700;
+  }
+  p{
+    margin: 22px 0px 0px 0px ;
+    font-size: large;
   }
 }
